[package]
name = "j2k-test-support"
description = "Dev-only fixtures and generators for j2k workspace tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "j2k_test_support"
path = "src/lib.rs"

[features]
j2k-native-fixtures = ["dep:j2k-native"]

[dependencies]
j2k-native = { path = "../j2k-native", version = "=0.7.0", optional = true }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
