[package]
name = "j2k-transcode-cuda"
description = "CUDA acceleration for JPEG-to-HTJ2K coefficient-domain transcode stages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_transcode_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = [
    "dep:j2k-cuda-runtime",
    "j2k-cuda-runtime/cuda-oxide-j2k-encode",
    "j2k-cuda-runtime/cuda-oxide-htj2k-encode",
    "j2k-cuda-runtime/cuda-oxide-transcode",
]
cuda-profiling = ["cuda-runtime", "j2k-cuda-runtime/cuda-profiling"]

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.7.3" }
j2k-transcode = { path = "../j2k-transcode", version = "=0.7.3" }
j2k-cuda-runtime = { path = "../j2k-cuda-runtime", version = "=0.7.3", optional = true }
j2k-native = { path = "../j2k-native", version = "=0.7.3" }

[dev-dependencies]
j2k-test-support = { path = "../j2k-test-support" }
j2k-transcode-test-support = { path = "../j2k-transcode-test-support" }

[lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
