[package]
name = "j2k-transcode-metal"
description = "Metal acceleration for JPEG to J2K and HTJ2K transcode paths"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_transcode_metal"
path = "src/lib.rs"

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.2" }
j2k-transcode = { path = "../j2k-transcode", version = "=0.6.2" }

[target.'cfg(target_os = "macos")'.dependencies]
j2k-metal = { path = "../j2k-metal", version = "=0.6.2" }
metal = { workspace = true }
rayon = { workspace = true }
j2k-metal-support = { path = "../j2k-metal-support", version = "=0.6.2" }

[dev-dependencies]
criterion = { workspace = true }
j2k-native = { path = "../j2k-native", version = "=0.6.2" }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.6.2" }
j2k-test-support = { path = "../j2k-test-support" }

[[bench]]
name = "dct97"
harness = false

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
