[package]
name = "j2k-transcode-metal"
description = "Metal acceleration for JPEG-to-HTJ2K coefficient-domain transcode stages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[package.metadata.cargo-machete]
ignored = ["rayon"]

[lib]
name = "j2k_transcode_metal"
path = "src/lib.rs"

[features]
default = []
bench-internals = ["j2k-transcode/dev-support"]

[dependencies]
j2k-codec-math = { path = "../j2k-codec-math", version = "=0.7.2" }
j2k-core = { path = "../j2k-core", version = "=0.7.2" }
j2k-metal-support = { path = "../j2k-metal-support", version = "=0.7.2" }
j2k-transcode = { path = "../j2k-transcode", version = "=0.7.2" }

[target.'cfg(target_os = "macos")'.dependencies]
j2k-metal = { path = "../j2k-metal", version = "=0.7.2" }
metal = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rayon = { workspace = true }
j2k-native = { path = "../j2k-native", version = "=0.7.2" }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.7.2" }
j2k-profile = { path = "../j2k-profile", version = "=0.7.2" }
j2k-test-support = { path = "../j2k-test-support" }
j2k-transcode-test-support = { path = "../j2k-transcode-test-support" }

[[bench]]
name = "dct97"
harness = false
test = false
required-features = ["bench-internals"]

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
