[package]
name = "j2k-transcode-test-support"
description = "Dev-only oracle helpers for j2k transcode adapter tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "j2k_transcode_test_support"
path = "src/lib.rs"

[dependencies]
j2k-transcode = { path = "../j2k-transcode", version = "=0.7.1", features = ["dev-support"] }
j2k-types = { path = "../j2k-types", version = "=0.7.1" }

[dev-dependencies]
j2k-native = { path = "../j2k-native", version = "=0.7.1" }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
