[package]
name = "j2k-transcode"
description = "JPEG-to-HTJ2K coefficient-domain transcode primitives for j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_transcode"
path = "src/lib.rs"

[dependencies]
rayon = { workspace = true }
j2k-core = { path = "../j2k-core", version = "=0.7.0" }
j2k-codec-math = { path = "../j2k-codec-math", version = "=0.7.0" }
j2k-jpeg = { path = "../j2k-jpeg", version = "=0.7.0" }
j2k = { path = "../j2k", version = "=0.7.0" }
j2k-native = { path = "../j2k-native", version = "=0.7.0" }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
j2k-test-support = { path = "../j2k-test-support" }

[[bench]]
name = "dct53"
harness = false
test = false

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
