[package]
name = "j2k-types"
description = "Shared JPEG 2000 and HTJ2K encode-stage contract types for j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k_types"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
