[package]
name        = "j2k"
description = "Memory-safety-first JPEG 2000 and HTJ2K codec APIs with optional CUDA and Metal acceleration"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme                 = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "j2k"
path = "src/lib.rs"

[dependencies]
j2k-core = { path = "../j2k-core", version = "=0.6.2" }
j2k-native = { path = "../j2k-native", version = "=0.6.2" }
j2k-types = { path = "../j2k-types", version = "=0.6.2" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
j2k-native = { path = "../j2k-native", version = "=0.6.2" }
j2k-test-support = { path = "../j2k-test-support" }

[[bench]]
name = "public_api"
harness = false
test = false

[lints.rust]
unsafe_code     = "forbid"
unreachable_pub = "warn"

[lints.clippy]
pedantic                = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
too_many_lines          = "allow"
cast_possible_truncation = "allow"
cast_sign_loss          = "allow"
cast_possible_wrap      = "allow"
doc_markdown            = "allow"
