[package]
name = "signinum-cuda-runtime"
description = "CUDA codec engine and Driver API runtime for signinum device adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "signinum_cuda_runtime"
path = "src/lib.rs"

[features]
default = []
cuda-profiling = []

[dependencies]
signinum-core = { path = "../signinum-core", version = "=0.5.0" }
libloading = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
