[package]
name = "signinum-j2k-cuda"
description = "CUDA device-output adapter for signinum-j2k"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "signinum_j2k_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = ["dep:signinum-cuda-runtime"]
cuda-profiling = ["cuda-runtime", "signinum-cuda-runtime/cuda-profiling"]

[dependencies]
signinum-core = { path = "../signinum-core", version = "=0.5.0" }
signinum-cuda-runtime = { path = "../signinum-cuda-runtime", version = "=0.5.0", optional = true }
signinum-j2k = { path = "../signinum-j2k", version = "=0.5.0" }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.5.0" }
signinum-profile = { path = "../signinum-profile", version = "=0.5.0" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.5.0" }

[[bench]]
name = "encode_stages"
harness = false

[[bench]]
name = "htj2k_decode"
harness = false

[[bench]]
name = "htj2k_encode"
harness = false
required-features = ["cuda-runtime"]

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
