[package]
name = "signinum-j2k-metal"
description = "Metal device-output adapter for signinum-j2k"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "signinum_j2k_metal"
path = "src/lib.rs"

[dependencies]
signinum-core = { path = "../signinum-core", version = "=0.5.0" }
signinum-j2k = { path = "../signinum-j2k", version = "=0.5.0" }
signinum-j2k-native = { path = "../signinum-j2k-native", version = "=0.5.0" }
signinum-metal-support = { path = "../signinum-metal-support", version = "=0.5.0" }
signinum-profile = { path = "../signinum-profile", version = "=0.5.0" }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
metal = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
rayon = { workspace = true }
signinum-test-support = { path = "../signinum-test-support" }

[build-dependencies]
cc = { workspace = true }

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
doc_markdown = "allow"
