[package]
name = "signinum-j2k-types"
description = "Shared JPEG 2000 encode-stage contract types for signinum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "signinum_j2k_types"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
