[package]
name = "signinum-jpeg-cuda"
description = "CUDA device-output adapter for signinum-jpeg"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = []

[lib]
name = "signinum_jpeg_cuda"
path = "src/lib.rs"

[features]
default = []
cuda-runtime = ["dep:signinum-cuda-runtime"]

[dependencies]
signinum-core = { path = "../signinum-core", version = "=0.5.0" }
signinum-cuda-runtime = { path = "../signinum-cuda-runtime", version = "=0.5.0", optional = true }
signinum-jpeg = { path = "../signinum-jpeg", version = "=0.5.0" }
signinum-profile = { path = "../signinum-profile", version = "=0.5.0" }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
signinum-test-support = { path = "../signinum-test-support" }

[[bench]]
name = "device_decode"
harness = false

[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
